--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/styled": "^10.0.27",
     "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.5.0",
     "next": "9.4.4",
@@ -15,6 +16,8 @@
     "react": "16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "16.13.1",
-    "reactstrap": "^8.4.1"
+    "react-emotion": "^10.0.0",
+    "reactstrap": "^8.4.1",
+    "use-smooth-scroll": "^1.1.1"
   }
 }
