--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@emotion/styled": "^10.0.27",
+    "@material-ui/icons": "^4.9.1",
     "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.5.0",
     "next": "9.4.4",
@@ -17,7 +18,10 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "16.13.1",
     "react-emotion": "^10.0.0",
+    "react-icons": "^3.10.0",
+    "react-id-swiper": "^4.0.0",
     "reactstrap": "^8.4.1",
+    "swiper": "^5.4.5",
     "use-smooth-scroll": "^1.1.1"
   }
 }
